# PAMSI

./: .gitignore  cos.cpp  zaddom8
Lab2/: Makefile  Makefile~  Ocena.md  tablica
Lab2/inc/: array.hh
Lab2/src/: array.cpp  main.cpp
Lab3/: Makefile~  Wyniki"+1".txt  Wyniki"2n".txt
Lab3/inc/: array.hh  timer.hh~  wariant.h  wykonywalny.hh  wykonywalny.hh~
Lab3/src/: array.cpp  main.cpp  main.cpp~
Lab4/: #Makefile#  .#Makefile  Lista.txt  Makefile  Ocena.md  Work
Lab4/inc/: List.hh  Node.hh  Queue.hh  Stack.hh  iClock.hh  iList.hh  iQueue.hh  iStack.hh
Lab4/src/: List.cpp  Node.cpp  Queue.cpp  Stack.cpp  iClock.cpp  iQueue.cpp  iStack.cpp  main.cpp
Lab5/: Losowy.txt  Malejacy.txt  Rosnacy.txt  tablica
Lab5/Piwot koniec/: Losowy.txt  Malejacy.txt  Rosnacy.txt
Lab5/Piwot poczatek/: Losowy.txt  Malejacy.txt  Rosnacy.txt
Lab5/Piwot randomowy/: Losowy.txt  Malejacy.txt  Rosnacy.txt
Lab6/: Automatyzator.py  Ocena.md
Lab8/: Lab7  Makefile
ListaStosKolejka/: Makefile  Work
MergeSort/: makefile  merge3.csv
PAMSI/: .gitignore
Projekt/: Makefile
QuickSortNaWektorze/: Makefile  tablica
TablicaHaszujaca/: Lab7  Makefile~
Wektor/: tablica
Wektor1/: Makefile
Wojna/: Gracz.java  Karta.java  KartySpecjalne.java  Kolor.java  Kolory.java  Main.java  Talia.java  Wojna.java
lAB7/: CMakeLists.txt  Lab7  Makefile  Makefile~
lAB7/inc/: Miernik.hh  Node.hh  TabAso.hh  Testowalny.hh  exceptions.hh  iTabAso.hh  work.hh  zalaczniki.hh
lAB7/src/: Miernik.cpp  Node.cpp  TabAso.cpp  exceptions.cpp  iTabAso.cpp  main.cpp  work.cpp  zalaczniki.cpp
(+111 files in other folders)
